# strompare

./: .codecov.yml  .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml
doc/: Readme.txt
examples/: strompare_find_example.cpp  stromparefiles.cpp
include/: strompare.h
include/strompare/: levenshtein.h  ngram.h  ngramsearch.h
src/: Doxyfile.in  levenshtein.cpp  ngram.cpp  ngramsearch.cpp  strompare.cpp  strompare.pc.in  strompareversion.h.in
strompare_find_example/: CMakeLists.txt
strompare_find_example/src/: strompare_find_example.cpp
stromparefiles/: CMakeLists.txt
stromparelib/: CMakeLists.txt
stromparelib/src/: Doxyfile.in  levenshtein.cpp  ngram.cpp  ngramsearch.cpp  strompare.cpp
stromparelib/test/: dameraulevenshteintest.cpp  levenshteintest.cpp  ngramtest.cpp
test/: dameraulevenshteintest.cpp  levenshteintest.cpp  ngramsearchtest.cpp  ngramtest.cpp  stromparetest.cpp  testcountries.h  testnouns.h  versiontest.cpp
